[gd_scene load_steps=11 format=3 uid="uid://8618vnetgk3o"]

[ext_resource type="Script" uid="uid://dklfb6y24ow1e" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://1wdj4ifys400" path="res://Scenes/thing.tscn" id="2_jjvhh"]
[ext_resource type="Texture2D" uid="uid://se4f611x8ej1" path="res://Assets/Art/Background/Background(100) 1.0.1.1.png" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://dhna661np5vj6" path="res://Scenes/UI/death_panel.tscn" id="3_kry3j"]
[ext_resource type="Theme" uid="uid://mxuh4rggdod8" path="res://Scripts/Resources/default_theme.tres" id="4_21xkr"]
[ext_resource type="PackedScene" uid="uid://bcxogfy4t7g2a" path="res://Scenes/floor.tscn" id="5_kry3j"]
[ext_resource type="PackedScene" uid="uid://5sdcmuwc1nye" path="res://Scenes/UI/submit_score.tscn" id="6_6bp64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(576, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21xkr"]
size = Vector2(576, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(16, 328)

[node name="Main" type="Node2D"]
script = ExtResource("1_8gbba")

[node name="Background" type="TextureRect" parent="."]
offset_left = -256.0
offset_top = -292.0
offset_bottom = -88.0
scale = Vector2(2, 2)
texture = ExtResource("2_kry3j")
stretch_mode = 1

[node name="GameCamera" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
limit_smoothed = true

[node name="ThingTopBound" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="Top" type="CollisionShape2D" parent="ThingTopBound"]
position = Vector2(0, -200)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ThingBottomBound" type="Area2D" parent="."]
process_mode = 3
collision_layer = 4

[node name="Bottom" type="CollisionShape2D" parent="ThingBottomBound"]
process_mode = 3
position = Vector2(0, 124)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="StaticBody2D" type="StaticBody2D" parent="ThingBottomBound"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThingBottomBound/StaticBody2D"]
position = Vector2(0, 127.2)
shape = SubResource("RectangleShape2D_21xkr")

[node name="TubeBound" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Left" type="CollisionShape2D" parent="TubeBound"]
position = Vector2(-344, 0)
shape = SubResource("RectangleShape2D_h2yge")

[node name="FloorBound" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Left" type="CollisionShape2D" parent="FloorBound"]
position = Vector2(-968, 0)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Thing" parent="." instance=ExtResource("2_jjvhh")]
z_index = 2
position = Vector2(0, -12)
metadata/_edit_group_ = true

[node name="Score" type="Label" parent="."]
z_index = 2
offset_left = -24.0
offset_top = -130.0
offset_right = 28.0
offset_bottom = -79.2188
theme = ExtResource("4_21xkr")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1

[node name="DeathPanel" parent="." instance=ExtResource("3_kry3j")]
visible = false
offset_left = 0.0
offset_top = -2.0
offset_right = 0.0
offset_bottom = -2.0

[node name="SubmitScore" parent="." instance=ExtResource("6_6bp64")]
visible = false
offset_left = -136.0
offset_top = -237.0
offset_right = -96.0
offset_bottom = -197.0

[node name="Floor2" parent="." instance=ExtResource("5_kry3j")]
z_index = 2
offset_left = -960.0
offset_top = 116.0
offset_right = -640.0
offset_bottom = 140.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Floor" parent="." instance=ExtResource("5_kry3j")]
z_index = 2
offset_left = -320.0
offset_top = 116.0
offset_right = 0.0
offset_bottom = 140.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[connection signal="body_entered" from="ThingBottomBound" to="." method="_on_bottom_bound_entered"]
[connection signal="area_entered" from="TubeBound" to="." method="_on_tube_bound_entered"]
[connection signal="area_entered" from="FloorBound" to="." method="_on_floor_bound_entered"]
